# smb-utils

./: .gitignore  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  getact.c  getact.h  passwd.c  passwd.h  smb_act.c  smb_db
autom4te.cache/: output.0  output.1  output.3  requests  traces.1  traces.2  traces.3
